<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appbar_hideable_behavior">com.google.android.material.appbar.AppBarLayout$Behavior</string>


    <string name="app_name">Coppada</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_account">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Textp app bar -->
    <string name="tv_bienvecida">Bienvenido</string>
    <string name="tv_q_desea">¿Vas a viajar?</string>
    <string name="secarch">Busca un lugar...</string>
    <string name="tv_best">Los TOP en tu ubicación</string>

    <!-- Texto detalle negocio -->
    <string name="tv_informacion">Información</string>
    <string name="tv_Web">Web</string>
    <string name="tv_Contacto">Contacto</string>
    <string name="tv_ubi">Ubicación</string>
    <string name="tv_revi">Reviews</string>
    <string name="tv_reviNo">No tiene reviews</string>
    <string name="fab_llamar">Llamar</string>
    <string name="fab_web">Visitar</string>

    <!-- Texto imagebuttons -->
    <string name="tv_resYBar">Restaurantes y bares</string>
    <string name="tv_cafeyter">Café y té</string>
    <string name="tv_copas">De copas</string>
    <string name="tv_respaDomi">Fast Food</string>
    <string name="tv_rpaste">Pastelerías</string>
    <string name="tv_gasoli">Gasolineras</string>

    <!-- Texto Cuenta -->
    <string name="tv_iniciarS">Iniciar sesión</string>
    <string name="tv_regis">Registrarse</string>
    <string name="tv_cerrarSe">Cerrar sesión</string>
    <string name="tv_restablecerContra">Restablecer contraseña</string>

    <string name="tv_fav">Tus favoritos</string>
    <string name="tv_recomendados">¿Te apetece?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>


    <!-- Widget -->
    <string name="widget_no_favorites_message">Add widget</string>

</resources>