<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:enabled="true"
        android:icon="@drawable/pin_drop"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/navigation_account"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/title_account" />

</menu>