<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fdez.projecttfg.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detalleNegocioFragment"
            app:destination="@id/detalleNegocioFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.fdez.projecttfg.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.fdez.projecttfg.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.fdez.projecttfg.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/detalleNegocioFragment"
        android:name="com.fdez.projecttfg.ui.detalleNegocio.DetalleNegocioFragment"
        android:label="fragment_detalle_negocio"
        tools:layout="@layout/fragment_detalle_negocio" />
</navigation>