<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resCiudad.ResCiudadFragment">
    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/AppBarRec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarRec"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title=""
            app:subtitle=""
            app:titleCentered="true"
            app:subtitleCentered="true"
            app:navigationIcon="@drawable/arrow_back_fill0_wght200_grad0_opsz24" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewRB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koulen_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/tv_resYBar"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRYB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textViewCT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koulen_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/tv_cafeyter"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCafeTe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textViewP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koulen_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/tv_rpaste"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBaker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koulen_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/tv_respaDomi"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFastFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewDCO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koulen_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/tv_copas"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCopas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewGasol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koulen_regular"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/tv_gasoli"
                    android:textSize="30sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </ScrollView>

    </com.google.android.material.appbar.AppBarLayout>

</RelativeLayout>